# Mandlebrot_CUDA

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  IO.hpp  config.hpp  cudaoperators.cu  cudaoperators.hpp  masterlib.hpp  meshgrid.hpp  operators.cu  operators.hpp  types.hpp
include/OpenGL/: OGLConstants.hpp  plot.hpp
plot/: validate_results_CUDA.m
tests/: CMakeLists.txt  run.sh  test_julia.cpp
tests/CPU/: CMakeLists.txt  test_julia_cpu.cpp
tests/CUDA/: CMakeLists.txt  test_julia.cu
tests/OpenGL/: CMakeLists.txt  plotgrid.cpp
tests/compute_and_plot/: CMakeLists.txt  test_compute_and_plot.cpp  test_julia_plot.cpp
tests/compute_and_plot_cuda/: CMakeLists.txt  test_compute_and_plot_cuda.cu  test_compute_and_plot_iterative_cuda.cu  test_julia_plot.cu
